# zstradr

./: .gitignore  README.md  cabal.project
.github/workflows/: ci.yml
zstradr-backtest/: zstradr-backtest.cabal
zstradr-backtest/src/ZStradr/Backtest/: Engine.hs  Events.hs  Execution.hs  Portfolio.hs  Runner.hs  Strategy.hs
zstradr-backtest/src/ZStradr/Backtest/Strategies/: BuyAndHold.hs
zstradr-backtest/test/: Spec.hs
zstradr-backtest/test/ZStradr/Backtest/: RunnerSpec.hs
zstradr-cli/: zstradr-cli.cabal
zstradr-cli/app/: Main.hs
zstradr-cli/src/: Main.hs
zstradr-core/: LICENSE  zstradr-core.cabal
zstradr-core/src/ZStradr/Core/: Types.hs
zstradr-core/test/: Spec.hs
zstradr-core/test/ZStradr/Core/: TypesSpec.hs
zstradr-data/: zstradr-data.cabal
zstradr-data/src/ZStradr/Data/: CSV.hs  MarketData.hs  Yahoo.hs  YahooFinance.hs
zstradr-data/test/: Spec.hs
zstradr-data/test/ZStradr/Data/: CSVSpec.hs
