cabal-version: 3.0
name:          zstradr-cli
version:       0.1.0.0
synopsis:      CLI entrypoint for ZStradr
description:   Command-line interface for running ZStradr trading strategies and backtests.
license:       MIT
author:        saw235
maintainer:    saw235
category:      Finance
build-type:    Simple

common common-options
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unused-do-bind
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveGeneric
    DeriveAnyClass
    TupleSections
    NumericUnderscores

executable zstradr
  import:          common-options
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
    base          >= 4.14 && < 5,
    zstradr-core,
    zstradr-backtest,
    aeson         >= 2.0,
    containers    >= 0.6,
    text          >= 1.2,
    bytestring    >= 0.10,
    mtl           >= 2.2
