cabal-version: 3.0
name:          zstradr-cli
version:       0.1.0
synopsis:      Command-line interface for ZStradr trading framework
description:   CLI for running backtests, fetching market data, and inspecting results.
license:       MIT
license-file:  LICENSE
author:        ZStradr Contributors
maintainer:    zstradr@example.com
category:      Finance
build-type:    Simple

executable zstradr
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
      base           >= 4.14 && < 5
    , zstradr-core
    , zstradr-data
    , zstradr-backtest
    , optparse-applicative >= 0.16
    , text           >= 1.2
  default-language:   Haskell2010
  default-extensions:
    OverloadedStrings
    RecordWildCards
  ghc-options: -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N
