cabal-version: 3.0
name:          zstradr-core
version:       0.1.0.0
synopsis:      Core domain types and interfaces for ZStradr
description:   Domain types, interfaces, and shared utilities for the ZStradr
               algorithmic trading framework.
license:       MIT
author:        saw235
maintainer:    saw235
category:      Finance
build-type:    Simple

common common-options
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unused-do-bind
  default-extensions:
    OverloadedStrings
    LambdaCase
    DeriveGeneric
    DeriveAnyClass
    TupleSections
    NumericUnderscores

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    ZStradr.Core.Types
  build-depends:
    base          >= 4.14 && < 5,
    aeson         >= 2.0,
    containers    >= 0.6,
    vector        >= 0.12,
    time          >= 1.9,
    text          >= 1.2,
    bytestring    >= 0.10,
    mtl           >= 2.2

test-suite zstradr-core-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    ZStradr.Core.TypesSpec
  build-tool-depends:
    hspec-discover:hspec-discover >= 2.8
  build-depends:
    base          >= 4.14 && < 5,
    zstradr-core,
    hspec         >= 2.8,
    aeson         >= 2.0,
    containers    >= 0.6,
    time          >= 1.9,
    text          >= 1.2,
    bytestring    >= 0.10
