cabal-version: 3.0
name:          zstradr-data
version:       0.1.0
synopsis:      Market data ingestion for ZStradr trading framework
description:   CSV loader, Yahoo Finance adapter, and in-memory market data store.
license:       MIT
license-file:  LICENSE
author:        ZStradr Contributors
maintainer:    zstradr@example.com
category:      Finance
build-type:    Simple

library
  hs-source-dirs:   src
  exposed-modules:
    ZStradr.Data.CSV
    ZStradr.Data.MarketData
    ZStradr.Data.Yahoo
  build-depends:
      base           >= 4.14 && < 5
    , zstradr-core
    , aeson          >= 2.0
    , bytestring     >= 0.10
    , cassava        >= 0.5
    , containers     >= 0.6
    , http-client    >= 0.7
    , http-client-tls >= 0.3
    , text           >= 1.2
    , time           >= 1.9
    , vector         >= 0.12
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    OverloadedStrings
    RecordWildCards
    TupleSections
  ghc-options: -Wall -Wcompat -Widentities -Wredundant-constraints

test-suite zstradr-data-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
      base
    , zstradr-data
    , hspec      >= 2.7
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
